--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="container">
     <h1>To-do-List</h1>
         <button type="button" onclick="AddToList()">Adicionar tarefa</button>
-            <input type="text" name="goals" id="goals" placeholder="Adicione suas tarefas aqui">
+            <input type="text" name="goals" id="goals" placeholder="Adicione suas tarefas">
     <div class="todo">
        
     
